platform/argo-cd/manifests/networkpolicy-allow-ingress-from-contour-to-server.yaml.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-contour
  namespace: argocd
  annotations:
    app.kubernetes.io/description: Only allows traffic from the contour envoy pod.
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: "server"
      app.kubernetes.io/instance: "argo-cd"
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: contour-public
      podSelector:
        matchLabels:
          app.kubernetes.io/component: "envoy"
          app.kubernetes.io/instance: "contour-public"
